--- a/blog.html
+++ b/blog.html
@@ -7,16 +7,16 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="/lahana/_app/immutable/assets/_layout.b8b77ae7.css" rel="stylesheet">
 		<link href="/lahana/_app/immutable/assets/Navbar.adbe211b.css" rel="stylesheet">
-		<link rel="modulepreload" href="/lahana/_app/immutable/entry/start.fca00846.js">
+		<link rel="modulepreload" href="/lahana/_app/immutable/entry/start.14b7b476.js">
 		<link rel="modulepreload" href="/lahana/_app/immutable/chunks/index.3576d516.js">
-		<link rel="modulepreload" href="/lahana/_app/immutable/chunks/singletons.7f4b8688.js">
-		<link rel="modulepreload" href="/lahana/_app/immutable/chunks/paths.bc7e2225.js">
-		<link rel="modulepreload" href="/lahana/_app/immutable/entry/app.0b135272.js">
+		<link rel="modulepreload" href="/lahana/_app/immutable/chunks/singletons.7af168e2.js">
+		<link rel="modulepreload" href="/lahana/_app/immutable/chunks/paths.aa56829c.js">
+		<link rel="modulepreload" href="/lahana/_app/immutable/entry/app.9af2bd68.js">
 		<link rel="modulepreload" href="/lahana/_app/immutable/entry/_layout.svelte.0ca1727a.js">
 		<link rel="modulepreload" href="/lahana/_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="/lahana/_app/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="/lahana/_app/immutable/entry/blog-page.svelte.fb68f21b.js">
-		<link rel="modulepreload" href="/lahana/_app/immutable/chunks/Navbar.52ed4ec8.js">
+		<link rel="modulepreload" href="/lahana/_app/immutable/entry/blog-page.svelte.98cd8a14.js">
+		<link rel="modulepreload" href="/lahana/_app/immutable/chunks/Navbar.d59537bb.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -41,7 +41,7 @@
 			
 			<script>
 				{
-					__sveltekit_8xg6b9 = {
+					__sveltekit_15h3vkj = {
 						env: {},
 						assets: "/lahana",
 						base: "/lahana",
@@ -51,10 +51,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/lahana/_app/immutable/entry/start.fca00846.js"),
-						import("/lahana/_app/immutable/entry/app.0b135272.js")
+						import("/lahana/_app/immutable/entry/start.14b7b476.js"),
+						import("/lahana/_app/immutable/entry/app.9af2bd68.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_8xg6b9.element, {
+						kit.start(app, __sveltekit_15h3vkj.element, {
 							node_ids: [0, 4],
 							data,
 							form: null,
