--- a/cart.html
+++ b/cart.html
@@ -15,7 +15,7 @@
 		<link rel="modulepreload" href="/lahana/_app/immutable/entry/_layout.svelte.0ca1727a.js">
 		<link rel="modulepreload" href="/lahana/_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="/lahana/_app/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="/lahana/_app/immutable/entry/about-page.svelte.22704499.js">
+		<link rel="modulepreload" href="/lahana/_app/immutable/entry/cart-page.svelte.15c367e6.js">
 		<link rel="modulepreload" href="/lahana/_app/immutable/chunks/Navbar.0ed7d714.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -43,7 +43,7 @@
         </a></div></div>
 </div>
 
-<div>Blog</div>
+<div>Cart</div>
 
 
 			
@@ -63,7 +63,7 @@
 						import("/lahana/_app/immutable/entry/app.73c1baaf.js")
 					]).then(([kit, app]) => {
 						kit.start(app, __sveltekit_1cmz8hj.element, {
-							node_ids: [0, 3],
+							node_ids: [0, 5],
 							data,
 							form: null,
 							error: null
